<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">卖书郎</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_home">首页</string>
    <string name="main_buy">我要买书</string>
    <string name="main_sell">我要卖书</string>
    <string name="main_my">我的</string>
	<string name="choose_region">选择地区:</string>
	<string name="serach_scan">扫描获取书名</string>
	<string name="search_name">手动输入书名</string>
	<string name="scan_isbn_search">扫描条形码快速搜索</string>
	<string name="scan_isbn_putaway">扫描条形码快速发布</string>
	<string name="book_name">书\t\t\t\t\t名</string>
	<string name="hint_search_book">根据书名/ISBN开始搜索书籍</string>
	<string name="recommend_new">推荐最新</string>
	<string name="price_lowest">价格最低</string>
	<string name="checkbox_can_none">(可不勾选)</string>
	<string name="hotbook_title">热门书籍</string>
	<string name="hotbook_category">分类书籍</string>
	

	<string name="book_price">原\t\t\t\t\t价</string>
	<string name="book_cost">定\t\t\t\t\t价</string>
	<string name="book_category">类\t\t\t\t\t别</string>
	<string name="book_new_or_old">新旧程度</string>
	<string name="book_region">所属地区</string>
	<string name="book_tips">标准书号</string>
	<string name="scan_auto_book">扫码将自动匹配</string>
	
	
	<string name="hint_input_cost">请输入整数价格</string>
	<string name="hint_input_category">请选择书籍类别</string>
	<string name="hint_input_region">请选择书籍所属地区</string>
	<string name="hint_input_new_or_old">请选择书籍新旧程度</string>
	<string name="hint_input_tips">扫码将自动匹配</string>
	<string name="button_sell_book">发布</string>
	
	<string name="hint_input_account">邮箱/手机</string>
	<string name="hint_input_password">密码</string>
	<string name="login">登录</string>
	<string name="register">注册账号</string>
	<string name="forget_password">忘记密码</string>
	
	<string name="my_username">用户昵称</string>
	<string name="my_account">用户账号</string>
	
	<string name="my_sell_book">所卖书籍</string>
	<string name="my_buy_book">已买书籍</string>
	<string name="my_collect_book">收藏书籍</string>
	<string name="my_setting">个人设置</string>
	<string name="my_custom_service">客户服务</string>	
	<string name="my_about">关于软件</string>
	
	<string name="register_phone">手机号码</string>
	<string name="register_email">邮箱地址</string>
	<string name="register_pass">输入密码</string>
	<string name="register_pass_again">确认密码</string>
	<string name="register_send_msg_code">获取验证码</string>
	<string name="register_msg_code">验证码</string>
	<string name="register_name">账户昵称</string>

	<string name="register_statements_1">*注册账户表明您同意卖书郎的</string>
	<string name="register_statements_2">注册协议</string>
	
	<string name="booklist">查看详情</string>
	
	<string name="bookdetail_bookname">书\t\t\t\t\t\t名</string>
	<string name="bookdetail_author">作\t\t\t\t\t\t者</string>
	<string name="bookdetail_publiccompany">出\t\t版\t\t社</string>
	<string name="bookdetail_seller_allbook">查看卖家所有书籍</string>
	<string name="bookdetail_buyer_read_title">买家须知</string>
	<string name="bookdetail_buyer_read">拍下书籍后请尽快提醒卖家发货，与卖家取得联系，若48小时内未完成交易
	    ，则订单自动取消。</string>
	<string name="bookdetail_transaction_flow">交易流程</string>
	<string name="bookdetail_transaction_flow_1">1.拍下书籍\t\t\t\t2.提醒卖家(可取消订单)</string>
	<string name="bookdetail_transaction_flow_2">3.卖家发货\t\t\t\t4.买家确认收货，交易完成</string>
	<string name="bookdetail_getit_now">立即购买</string>
	<string name="bookdetail">书籍详情</string>
	
	<string name="forget_pass_next">下一步</string>
	<string name="forget_pass_new_pass">新密码</string>
	<string name="forget_pass_new_pass_again">确认新密码</string>
	<string name="button_sure">确认</string>
	
	<string name="already_buy_books">已买书籍</string>
	<string name="already_buy_waitshipment">待发货</string>
	<string name="already_buy_waitreceive">待收货</string>
	<string name="already_buy_finish">已完成</string>
	<string name="already_sell_books">所卖书籍</string>
	<string name="already_sell_selling">正在售</string>
	<string name="already_sell_waitshipment">待发货</string>
	<string name="already_sell_waitaffirm">待确认</string>
	<string name="already_sell_finsh">已完成</string>
	
	<string name="contact_information">关于个人</string>
	<string name="contact_accountname">昵称</string>
	<string name="contact_religion">地区</string>
	<string name="contact_phone">手机</string>
	<string name="contact_email">邮箱</string>
	<string name="contact_school">学校</string>
	<string name="contact_call">拨\t打\t电\t话</string>
	
	<string name="change_password">修改密码</string>
	<string name="change_password_oldpass">当前密码</string>
	<string name="change_password_newpass">新密码</string>
	<string name="change_password_newpass_again">确认密码</string>
	<string name="change_password_msgcode">验证码</string>
	<string name="change_password_sure">确认修改</string>
	
	<string name="collect_book">收藏书籍</string>
	
	<string name="personal_setting">个人设置</string>
	<string name="personal_setting_nickname">昵\t\t\t\t\t称</string>
	<string name="personal_setting_sex">性\t\t\t\t\t别</string>
	<string name="personal_setting_school">学\t\t\t\t\t校</string>
	<string name="personal_setting_religion">地\t\t\t\t\t区</string>
	<string name="personal_setting_phone">手机号码</string>
	<string name="personal_setting_email">邮箱地址</string>
	<string name="personal_setting_changepass">修改密码</string>
	<string name="personal_setting_exit">退出登录</string>
	<string name="personal_setting_edit">编辑</string>
	<string name="personal_setting_edit_finish">完成</string>
	
	
	<string name="donot_want_sell">我不想卖了</string>
	<string name="contact_buyer">联系买家</string>
	<string name="affirm_shipment">确认发货</string>
	
	<string name="contact_seller">联系卖家</string>
	<string name="donot_want_buy">不想买了</string>
	<string name="tixing_waitshipment">提醒发货</string>
	
	<string name="complain">投诉</string>
	<string name="affirm_receive">确认收货</string>

	
</resources>
