<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/write"
    android:id="@+id/ll"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_login_account"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/write"
            android:paddingLeft="10dp"
            android:ems="10"
            android:drawableLeft="@drawable/login_account"
            android:drawablePadding="20dp"
            android:hint="@string/hint_input_account"
            android:textSize="15sp" >

            <requestFocus />
        </EditText>

        <View
            android:id="@+id/divide_vertical"
            android:layout_width="280dp"
            android:layout_height="1dip"
            android:layout_gravity="center_horizontal"
            android:background="@color/divide"
            android:gravity="center_vertical" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/write"
            android:ems="10"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/login_pass"
            android:drawablePadding="20dp"
            android:hint="@string/hint_input_password"
            android:inputType="textPassword"
            android:textSize="15sp" />

        <View
            android:layout_width="280dp"
            android:layout_height="1dip"
            android:layout_gravity="center_horizontal"
            android:background="@color/divide"
            android:gravity="center_vertical" />
    </LinearLayout>

    <Button
        android:id="@+id/bn_login"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:background="@drawable/btn_press"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/register"
            android:textSize="15sp"
            android:textColor="@color/app_color" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="right" >

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/forget_password"
                android:textSize="15sp"
                android:textColor="@color/app_color" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>